# uac

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml  requirements-3rd-party.txt  requirements-gitlab.txt  setup.py  tox.ini  vcpkg.json
.ci/: manylinux_vcpkg.sh
cmake/: CompilerCaching.cmake
doc/: Doxyfile  cpp.md  matlab.md  python.md
matlab/: CMakeLists.txt
matlab/+uac/: Acquisition.m  Dataset.m  DestinationLink.m  Edge.m  Element.m  ElementGeometry.m  Event.m  Excitation.m  Group.m  HwConfig.m  HwConfigEnum.m  IGroup.m  ImpulseResponse.m  LibBinding.m  Object.m  Polarity.m  Probe.m  ReceiveSetup.m  StdVector.m  SuperGroup.m  Transform.m  TransmitSetup.m  TriggerIn.m  TriggerOut.m  Vector3D.m  Version.m  Wave.m  cloneDataset.m  loadFromFile.m  saveToFile.m  toUrx.m  validate.m
matlab/+uac/+Group/: DataType.m  SamplingType.m
matlab/+uac/+Probe/: ProbeType.m
matlab/+uac/+Wave/: WaveType.m
matlab/binding/: CMakeLists.txt  bindings.cpp  linux.prj.in  uac.prj.in  windows.prj.in
matlab/binding/uac/matlab/: bindings.h  bindings_decl.h  bindings_impl.h
python/: CMakeLists.txt  README.md  bindings.cpp
python/uac/python/: bindings.h
python/ultrasound_acquisition_configuration/: bindings.pyi
test/: CMakeLists.txt
test/data/: single_int16_rf.urx
test/io/: CMakeLists.txt  io.h  writer_test.cpp
test/matlab/: runTestsCi.m
test/matlab/+uac/+UnitTests/: CreateUff.m  Version.m
test/python/: CMakeLists.txt  test_bindings.py  test_bindings_clone.py  test_bindings_destination_link.py  test_bindings_hw_config.py  test_bindings_io.py  test_bindings_super_group.py  test_bindings_trigger.py  uac_dataset_gen.py
test/tutorials/: CMakeLists.txt  helpers.cpp  helpers.h  helpers.py  makeLinearArrayUac.m  makePlaneWaveTransmitSetupUac.m  makePlaneWavesGroupUac.m  makeReceiveSetupUac.m  t1_installation.cpp  t1_installation.m  t1_installation.py  t2_open_save.cpp  t2_open_save.m  t2_open_save.py  t3_rf_data.cpp  t3_rf_data.m  t3_rf_data.py  t4_probe.cpp  t4_probe.m  t4_probe.py  t5_transmit_setup.cpp  t5_transmit_setup.m  t5_transmit_setup.py  t6_receive_setup.cpp  t6_receive_setup.m  t6_receive_setup.py  t7_event.cpp  t7_event.m  t7_event.py  t8_acquisition.cpp  t8_acquisition.m  t8_acquisition.py  t9_stream.cpp  t9_stream.m  t9_stream.py  tutorials.m  tutorials.py
test/uac/: CMakeLists.txt  test_build.cpp  test_igroup.cpp
test/utils/: CMakeLists.txt  clone_generic_test.cpp  clone_generic_test.h  to_urx.cpp  validator.cpp
uac/: CMakeLists.txt  UacConfig.cmake.in  uac.h.in
uac/utils/: CMakeLists.txt  clone.cpp  clone.h  serialize_helper.cpp  serialize_helper.h  to_urx.cpp  to_urx.h  validator.cpp  validator.h
uac/utils/detail/: clone.h
uac/utils/io/: enums.cpp  reader.cpp  reader.h  reader_impl.h  serialize_helper.cpp  serialize_helper.h  writer.cpp  writer.h  writer_impl.h
uac/utils/test/: dataset_gen.h
