[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "wheel==0.45.1",
    "cmake-build-extension==0.6.1",
    "setuptools==75.3.0; python_version == '3.8'",
    "setuptools==75.6.0; python_version >= '3.9'",
    "toml==0.10.2",
    "cmake==3.31.1",
    #"## The following requirements were added by pip freeze:",
    "gitdb==4.0.11",
    "GitPython==3.1.43",
    "ninja==1.11.1.2",
    "packaging",
    "setuptools-scm==8.1.0",
    "smmap==5.0.1",
]

[project]
name = "ultrasound-acquisition-configuration"
version = "1.3.1"
dependencies = [
    "cmake-build-extension==0.6.1",
    "numpy==1.24.4; python_version == '3.8'",
    "numpy==1.26.4; python_version == '3.9'",
    "numpy==2.1.3; python_version == '3.10'",
    "numpy==2.3.4; python_version >= '3.11'",
    #"## For tests",
    "parameterized==0.9.0",
    #"## The following requirements were added by pip freeze:",
    "cmake==3.31.1",
    "gitdb==4.0.11",
    "GitPython==3.1.43",
    "ninja==1.11.1.2",
    "packaging",
    "setuptools==75.3.0; python_version == '3.8'",
    "setuptools==75.6.0; python_version >= '3.9'",
    "setuptools-scm==8.1.0",
    "smmap==5.0.1",
]
description = "Ultrasound Acquisition Configuration file format C++ implementation and wrapping in Python and Matlab"
readme = "README.md"
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft",
    "Operating System :: Unix",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Topic :: File Formats",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://moduleus.com"
Documentation = "https://github.com/moduleus/uac/wiki"
Repository = "https://github.com/moduleus/uac.git"
Issues = "https://github.com/moduleus/uac/issues"
Changelog = "https://github.com/moduleus/uac/wiki/changelog"

[tool.setuptools]
py-modules = []

[tool.black]
line-length = 100
extend-exclude = '\.pyi$'

[tool.cibuildwheel]
build-verbosity = 1
build-frontend = { name = "pip", args = ["--no-clean"] }
test-command = "python -m unittest discover {project}/test/python"

[tool.cibuildwheel.windows]
# Should be build-system.requires but doesn't work.
before-build = "pip install cmake==4.0.3"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

[tool.mypy]
files = "."
exclude = [".*venv.*", "install", "vcpkg", "build", "urx"]
follow_imports = "skip"
show_column_numbers = true
ignore_missing_imports = true

# Importations
#disallow_any_unimported = true
#disallow_any_expr = true
#disallow_any_decorated = true
#disallow_any_explicit = true
#disallow_any_generics = true
#disallow_subclassing_any = true

# Annotations
#disallow_untyped_calls = true
#disallow_untyped_defs = true
#disallow_incomplete_defs = true
#check_untyped_defs = true
#disallow_untyped_decorators = true

# None et Optional
implicit_optional = true
strict_optional = true

# Warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

# Comportement strict
strict_equality = true
extra_checks = true
local_partial_types = true

# Divers
implicit_reexport = false
#strict = true

[[tool.mypy.overrides]]
module = ["cmake_build_extension"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["parameterized"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ultrasound_acquisition_configuration.bindings"
ignore_errors = true

[tool.pyright]
ignore = [
    "python/ultrasound_acquisition_configuration/bindings.pyi",
    "install",
    "vcpkg",
    "build",
    "urx",
]
stubPath = "python"
typeCheckingMode = "strict"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportMissingParameterType = "none"
reportUnknownLambdaType = "none"
reportConstantRedefinition = "none"
reportMissingModuleSource = "none"

[tool.isort]
skip = ["vcpkg", "install", "install", "build", "urx"]
skip_glob = ["*venv*"]
